--- a/src/components/scroll-video/scroll-video.module.css
+++ b/src/components/scroll-video/scroll-video.module.css
@@ -1,12 +1,12 @@
 .container {
-  height: calc(100dvh * var(--scroll-length, 3));
+  height: calc(100lvh * var(--scroll-length, 3));
 }
 
 .sticky {
   position: sticky;
   top: 0;
   width: 100%;
-  height: 100dvh;
+  height: 100lvh;
   overflow: hidden;
 }
 
